--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for countries in travel_destinations:\n",
-    "        travel_destinations.title(index)"
+    "        travel_destinations.title(index)\n",
+    "return trave"
    ]
   },
   {
