Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     "def capitalize_countries():\n",
     "    for countries in travel_destinations:\n",
     "        travel_destinations.title(index)\n",
-    "return trave"
+    "return travel_destinations"
    ]
   },
   {
