--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalized_countries = []\n",
-    "    for countries in travel_destinations:\n",
+    "    for destination in travel_destinations:\n",
     "        \n",
     "return travel_destinations.title"
    ]
